# imgl

./: .gitignore  CMakeLists.txt
cmake/: Dependencies.cmake  Docs.cmake  Warnings.cmake
configured/: CMakeLists.txt
docs/: Doxyfile
include/imgl/: CLIParser.hpp  CommandData.hpp  Defines.hpp  FileUtils.hpp  FilterCommand.hpp  FilterCommandHandler.hpp  FrameBuffer.hpp  ICommand.hpp  Image.hpp  ImageProcessor.hpp  MetadataCommand.hpp  MetadataCommandHandler.hpp  RenderContext.hpp  RenderUtils.hpp  Shader.hpp  TransformCommand.hpp  TransformCommandHandler.hpp
src/: CMakeLists.txt
src/imgl-lib/: CLIParser.cpp  CMakeLists.txt  FileUtils.cpp  FilterCommand.cpp  FilterCommandHandler.cpp  FrameBuffer.cpp  Image.cpp  ImageProcessor.cpp  MetadataCommand.cpp  MetadataCommandHandler.cpp  RenderContext.cpp  RenderUtils.cpp  Shader.cpp  TransformCommand.cpp  TransformCommandHandler.cpp
src/imgl-main/: CMakeLists.txt  main.cpp
